--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@types/mapbox-gl": "^2.7.13",
     "devextreme": "^23.1.3",
     "devextreme-angular": "^23.1.3",
     "devextreme-schematics": "^1.6.0",
+    "mapbox-gl": "^2.15.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
