--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
     "@ngrx/store": "^17.0.1",
+    "@ngrx/store-devtools": "^17.0.1",
     "angular-in-memory-web-api": "^0.17.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
