--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@ngrx/component-store": "^17.0.1",
     "@ngrx/effects": "^17.0.1",
     "@ngrx/entity": "^17.0.1",
     "@ngrx/router-store": "^17.0.1",
