ng add @cypress/schematic

--- a/angular.json
+++ b/angular.json
@@ -98,13 +98,59 @@
             ],
             "scripts": []
           }
-                }
+        },
+        "cypress-run": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "angular-sandbox:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "angular-sandbox:serve:production"
+            }
+          }
+        },
+        "cypress-open": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "watch": true,
+            "headless": false
+          }
+        },
+        "ct": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "angular-sandbox:serve",
+            "watch": true,
+            "headless": false,
+            "testingType": "component"
+          },
+          "configurations": {
+            "development": {
+              "devServerTarget": "angular-sandbox:serve:development"
+            }
+          }
+        },
+        "e2e": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "angular-sandbox:serve",
+            "watch": true,
+            "headless": false
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "angular-sandbox:serve:production"
+            }
+          }
+        }
       }
     }
   },
   "cli": {
     "analytics": false,
     "schematicCollections": [
+      "@cypress/schematic",
       "@cypress/schematic",
       "@schematics/angular"
     ]
