--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@fortawesome/angular-fontawesome": "^0.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
-    "bootstrap": "^5.3.2",
+    "@ng-bootstrap/ng-bootstrap": "11.0.0",
+    "bootstrap": "4.6.0",
     "bootstrap-icons": "^1.11.2",
     "json-server": "^0.17.4",
     "ng-bootstrap": "^1.6.3",
