--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@angular/platform-browser": "^18.2.9",
     "@angular/platform-browser-dynamic": "^18.2.9",
     "@angular/router": "^18.2.9",
-    "@ngrx/effects": "^17.0.1",
-    "@ngrx/router-store": "^17.0.1",
-    "@ngrx/store": "^17.0.1",
-    "@ngrx/store-devtools": "^17.0.1",
+    "@ngrx/effects": "^18.1.0",
+    "@ngrx/router-store": "^18.1.0",
+    "@ngrx/store": "^18.1.0",
+    "@ngrx/store-devtools": "^18.1.0",
     "angular-in-memory-web-api": "^0.17.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.14.10",
+    "@ngrx/operators": "^18.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.10",
