--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@angular/platform-browser-dynamic": "^18.2.9",
     "@angular/router": "^18.2.9",
     "@ngrx/effects": "^18.1.0",
+    "@ngrx/operators": "^18.0.0",
     "@ngrx/router-store": "^18.1.0",
     "@ngrx/store": "^18.1.0",
     "@ngrx/store-devtools": "^18.1.0",
-    "angular-in-memory-web-api": "^0.17.0",
+    "angular-in-memory-web-api": "^0.18.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.10",
-    "@ngrx/operators": "^18.0.0"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.10",
